[gd_scene load_steps=8 format=3 uid="uid://cu0a282ycnlbw"]

[ext_resource type="Script" path="res://Scenes/Entities/EntityNode.gd" id="1_uuk4d"]
[ext_resource type="Texture2D" uid="uid://dcawaspbgp2bp" path="res://Assets/Sprites/Entity.png" id="2_xfxe5"]
[ext_resource type="Script" path="res://Scripts/Interface/TooltipData.gd" id="3_yc2fv"]
[ext_resource type="Script" path="res://Scripts/Interface/Nameplate.gd" id="4_or3kp"]
[ext_resource type="Theme" uid="uid://jegwin2s8h28" path="res://Assets/Themes/DefaultTheme.tres" id="4_vpgy7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bismq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ulft"]
size = Vector2(132.733, 135.826)

[node name="EntityNode" type="CharacterBody2D" groups=["entities", "npc"]]
collision_layer = 4
collision_mask = 13
input_pickable = true
script = ExtResource("1_uuk4d")

[node name="Sprite" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 1)
texture = ExtResource("2_xfxe5")
offset = Vector2(0, -17.6666)

[node name="Collision" type="CollisionShape2D" parent="."]
scale = Vector2(2, 0.5)
shape = SubResource("CircleShape2D_bismq")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(-0.530319, 2.65165)
scale = Vector2(0.333, 0.333)
collision_layer = 2048
collision_mask = 2048

[node name="Area" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-4.55172, -59.8613)
shape = SubResource("RectangleShape2D_1ulft")

[node name="TooltipData" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tooltip_text = "test"
mouse_filter = 1
script = ExtResource("3_yc2fv")

[node name="Name" type="Control" parent="." node_paths=PackedStringArray("nameplate", "nameplate_label")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -90.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("4_or3kp")
nameplate = NodePath("Canvas/Nameplate")
nameplate_label = NodePath("Canvas/Nameplate/NameplateLabel")

[node name="Canvas" type="CanvasLayer" parent="Name"]
follow_viewport_scale = 0.0

[node name="Nameplate" type="Control" parent="Name/Canvas"]
layout_mode = 3
anchors_preset = 0
offset_top = -90.0
offset_bottom = -90.0

[node name="NameplateLabel" type="RichTextLabel" parent="Name/Canvas/Nameplate"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 10)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("4_vpgy7")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "-------"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[connection signal="input_event" from="Hitbox" to="." method="_on_hitbox_input_event"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_hitbox_mouse_exited"]
